# auth-lib

./: CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.dev.txt  requirements.fastapi.txt  requirements.txt  setup.py
.github/workflows/: build_and_publish.yml  checks.yml
auth_lib/: __init__.py  aiomethods.py  exceptions.py  fastapi.py  interface.py  methods.py  testutils.py
auth_lib/_aiomethods/: __init__.py  auth_api.py  userdata_api.py
auth_lib/_methods/: __init__.py
auth_lib/airflow/: auth_api.py  auth_ui.py
auth_lib/methods/: auth_api.py  userdata_api.py
auth_lib/testing/: __init__.py  testutils.py
